updated maven version and corrected application properties